# ollama_tools_calling_demo

./: README.md  issues.json  pyproject.toml
structured_assistant/: main.py  utils.py
tests/: test_json_functions.py
